--- a/Eco_illum.html
+++ b/Eco_illum.html
@@ -26,11 +26,11 @@
     </div>
   </header>
 
-<div class="scroll-container">
+<!-- <div class="scroll-container">
   <img src="rss-eco/AnnChou_eco1_dragon_governerhouse_day.jpg" alt="Feminist Dragon Boat lantern resting by the pool of Governor House" />
   <img src="rss-eco/AnnChou_eco10_pilot_closer_backlit_effect_of_sumi-e_in_clr_pk" alt="" />
   <img src="rss/AnnChou_eco4_draytrip_dragon_owl_duo_Trout Lake.jpg" alt="Dragon and owl duo installation near Trout Lake" />
-</div>
+</div>  -->
 
 
   <div class="icon-bar">
