--- a/Eco_illum.html
+++ b/Eco_illum.html
@@ -22,8 +22,12 @@
       <a href="https://annreflection.square.site/">ArtShop 👜</a>
       <a href="javascript:void(0);" class="icon" onclick="myFunction()">
         <i class="fa fa-bars"></i>
-      </a>
+      </a> 
+      <button onclick="document.body.classList.toggle('dark-mode')">
+        Toggle Dark Mode
+      </button>
     </div>
+    
   </header>
 
 <!-- <div class="scroll-container">
@@ -209,10 +213,6 @@
   });
 </script>
 
-  
-  <button id="toggle-dark" class="button-ghost" style="position: fixed; bottom: 80px; left: 20px; z-index: 1001;">
-  🌜 Dark Mode
-</button>
 
 </body>
 </html>
