--- a/Eco_illum.html
+++ b/Eco_illum.html
@@ -10,7 +10,7 @@
   <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui/dist/fancybox/fancybox.umd.js"></script>
 </head>
 
-<body>
+<body class="dark-mode">
   <header>
     <div class="topnav" id="myTopnav">
       <a href="#home" class="logo">
