--- a/Eco_illum.html
+++ b/Eco_illum.html
@@ -13,22 +13,21 @@
 <body class="dark-mode">
   <header>
     <div class="topnav" id="myTopnav">
-      <a href="#home" class="logo">
+      <a href="index.html" class="logo">
         <img src="rss/AnnReflectionBannerforLetter_1692696090.webp" height="60" alt="Ann Chou logo" />
       </a>
-      <a class="active" href="#home">Home 🏠</a>
-      <!-- <a href="#workshops">Workshops 🎨</a> -->
-      <a href="Eco_illum.html" class="eco-link">Eco-Illum 🌘</a>
+      <a href="#home">Home 🏠</a>
+      <a href="Eco_illum.html" class="eco-link active">Eco-Illum 🌘</a>
       <a href="https://annreflection.square.site/">ArtShop 👜</a>
+      <button class="button-ghost dark-toggle" onclick="document.body.classList.toggle('dark-mode')">
+        🌙
+      </button>
       <a href="javascript:void(0);" class="icon" onclick="myFunction()">
         <i class="fa fa-bars"></i>
       </a> 
-      <button onclick="document.body.classList.toggle('dark-mode')">
-        Toggle Dark Mode
-      </button>
     </div>
-    
   </header>
+
 
 <!-- <div class="scroll-container">
   <img src="rss-eco/AnnChou_eco1_dragon_governerhouse_day.jpg" alt="Feminist Dragon Boat lantern resting by the pool of Governor House" />
