--- a/Eco_illum.html
+++ b/Eco_illum.html
@@ -16,7 +16,7 @@
     <a href="index.html" class="logo">
       <img src="rss/AnnReflectionBannerforLetter_1692696090.webp" height="60" alt="Ann Chou logo" />
     </a>
-    <a href="#home">Home 🏠</a>
+    <a href="index.html">Home 🏠</a>
     <a href="Eco_illum.html" class="eco-link active">Eco-Illum 🌘</a>
     <a href="https://annreflection.square.site/">ArtShop 👜</a>
   
