--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <img src="rss/AnnReflectionBannerforLetter_1692696090.webp" height="60" alt="Ann Chou logo" />
       </a>
       <a class="active" href="#home">Home 🏠</a>
-      <a href="Eco-illum.html" class="eco-link">Eco-Illum 🌘</a>
+      <a href="Eco_illum.html" class="eco-link">Eco-Illum 🌘</a>
       <a href="https://annreflection.square.site/">ArtShop 👜</a>
 
       <!-- 🌙 Dark mode toggle button -->
