--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <div class="project">
           <h3>Eco-Illuminessence & Spoon Screendance</h3>
           <p>Exploring the interplay between visual art, movement, and shadow in green public spaces.</p>
-          <a href="Eco-illum.html" class="button glow-ink">Explore Eco-Illuminessence🌘 Project</a>
+          <a href="Eco_illum.html" class="button glow-ink">Explore Eco-Illuminessence🌘 Project</a>
         </div>
         <div class="project">
           <h3>Sumi-e & Shoebox Stages</h3>
