--- a/Eco_illum.html
+++ b/Eco_illum.html
@@ -14,7 +14,7 @@
   <header>
   <div class="topnav" id="myTopnav">
     <a href="index.html" class="logo">
-      <img src="rss/AnnReflectionBannerforLetter_1692696090.webp" height="60" alt="Ann Chou logo" />
+      <img src="rss/AnnReflectionBannerforLetter_clear.png" height="60" alt="Ann Chou logo" />
     </a>
     <a href="index.html">Home 🏠</a>
     <a href="Eco_illum.html" class="eco-link active">Eco-Illum 🌘</a>
