--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <header>
     <div class="topnav" id="myTopnav">
       <a href="#home" class="logo">
-        <img src="rss/AnnReflectionBannerforLetter_1692696090.webp" height="60" alt="Ann Chou logo" />
+        <img src="rss/AnnReflectionBannerforLetter_clear.png" height="60" alt="Ann Chou logo" />
       </a>
       <a class="active" href="#home">Home 🏠</a>
       <a href="Eco_illum.html" class="eco-link">Eco-Illum 🌘</a>
