--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <img src="rss/WaterRabbitTrop_storytelling.jpg" alt="Three illuminated rabbit sculptures with umbrellas sit beneath trees at night during rain. They are handmade with sumi-e brushwork and eco-friendly materials for the 2023 Renfrew Ravine Moon Festival." />
             <figcaption>“Storytelling Water Rabbits Trio” illuminated at the 2023 Renfrew Ravine Streamside Moon Festival.</figcaption>
           </figure>
-          <a href="contact.html" class="cta glow">Get in Touch</a>
+          <a href="https://www.instagram.com/annreflection/" class="cta glow">see more upcoming @annreflection </a>
         </div>
         <div class="project">
           <h3>Eco-Illuminessence & Spoon Screendance</h3>
@@ -102,8 +102,9 @@
       <h2>Let’s Collaborate</h2>
       <p>Interested in a storefront activation, co-created workshop, or arts residency? Let’s build it together.</p>
       <div class="button-group">
-        <a href="contact.html" class="cta glow">Contact Me</a>
-        <a href="workshops.html" class="button glow-ink">Workshops</a>
+        <!-- <a href="contact.html" class="cta glow">Contact Me</a> -->
+        <p>You're welcome to contact me via email: annreflection at gmail dot com</p>
+        <a href="https://annreflection.substack.com/" class="button glow-ink">Studio Notes & Stories</a>
         <a href="https://ko-fi.com/annreflection/commissions" class="button-ghost glow-green">Commissions</a>
       </div>
     </section>
