--- a/index.html
+++ b/index.html
@@ -74,7 +74,8 @@
         <div class="project">
           <h3>Sumi-e & Shoebox Stages</h3>
           <p>Workshops blending ink brush play with hands-on design for accessibility and delight.</p>
-          <a href="workshops.html" class="button glow-ink">Join Workshop</a>
+          <!-- <a href="workshops.html" class="button glow-ink">Join Workshop</a> -->
+          Let’s chat – annreflection at gmail dot com
         </div>
       </div>
     </section>
