--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Ann K. Chou – Artist & Accessibility Advocate</title>
+  <meta name="description" content="Ann K. Chou is a Deaf, Hong Kong–born artist and access designer who creates inclusive installations, sensory lanterns, and participatory workshops across Vancouver and Victoria." />
+  <meta name="keywords" content="Ann Chou, artist, lantern maker, accessibility, Deaf artist, inclusive design, community art, Victoria BC, Vancouver BC, sensory art, sumi-e, light installation" />
+  <meta name="author" content="Ann K. Chou" />
+  <meta property="og:title" content="Ann K. Chou – Artist & Accessibility Advocate" />
+  <meta property="og:description" content="Lanterns, sumi-e, and access-centered performance connecting art, care, and community." />
+  <meta property="og:image" content="https://annchou.github.io/rss/AnnReflectionBannerforLetter_clear.png" />
+  <meta property="og:url" content="https://annchou.github.io/" />
+  <meta name="twitter:card" content="summary_large_image" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
   <link rel="stylesheet" href="css/style_resp.css" />
 </head>
@@ -69,6 +77,11 @@
         <div class="project">
           <h3>Eco-Illuminessence & Spoon Screendance</h3>
           <p>Exploring the interplay between visual art, movement, and shadow in green public spaces.</p>
+            <figure class="rabbit-figure">
+            <img src="rss/AnnChou_Ecoillum_tile.png"  alt="Composite of four photos from Ann K. Chou’s Eco-Illuminessence installation at Xchanges Gallery in June 2025. Includes sumi-e ink panels, glowing fabric lanterns, rainbow lighting, and shadow puppetry in participatory space." />
+           <figcaption><em>Eco-Illuminessence: A Sensory Crossing</em> – 4-part installation & shadow performance, Xchanges Gallery (June 2025)</figcaption>
+          </figure>
+          
           <a href="Eco_illum.html" class="button glow-ink">Explore Eco-Illuminessence🌘 Project</a>
         </div>
         <div class="project">
