--- a/Eco_illum.html
+++ b/Eco_illum.html
@@ -4,6 +4,15 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Eco-Illuminessence: A Sensory Crossing</title>
+  <meta name="description" content="Eco-Illuminessence is a multisensory installation-performance by Ann K. Chou exploring shadow, light, sumi-e, and embodied non-verbal storytelling through lanterns and interaction." />
+  <meta name="keywords" content="Eco-Illuminessence, Ann Chou, lantern installation, sumi-e art, performance art, accessibility, non-verbal art, shadow puppetry, visual poetry, Victoria art, Xchange gallery" />
+  <meta name="author" content="Ann K. Chou" />
+  <meta property="og:title" content="Eco-Illuminessence – A Sensory Crossing by Ann K. Chou" />
+  <meta property="og:description" content="Shadow, light, and sensory improvisation meet in this hybrid art-performance project." />
+  <meta property="og:image" content="https://annchou.github.io/rss-eco/AnnChou_eco1_dragon_governerhouse_day.jpg" />
+  <meta property="og:url" content="https://annchou.github.io/Eco_illum.html" />
+  <meta name="twitter:card" content="summary_large_image" />
+
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
   <link rel="stylesheet" href="css/style_resp.css" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui/dist/fancybox/fancybox.css" />
@@ -17,6 +26,7 @@
       <img src="rss/AnnReflectionBannerforLetter_clear.png" height="60" alt="Ann Chou logo" />
     </a>
     <a href="index.html">Home 🏠</a>
+    <a href="artist-bio.html">Bio 🧬</a>
     <a href="Eco_illum.html" class="eco-link active">Eco-Illum 🌘</a>
     <a href="https://annreflection.square.site/">ArtShop 👜</a>
   
