--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <img src="rss/AnnReflectionBannerforLetter_clear.png" height="60" alt="Ann Chou logo" />
       </a>
       <a class="active" href="#home">Home 🏠</a>
-      <a href="artist-bio.html">Bio 🧬</a>
+      <a href="artist_bio.html">Bio 🧬</a>
       <a href="Eco_illum.html" class="eco-link">Eco-Illum 🌘</a>
       <a href="https://annreflection.square.site/">ArtShop 👜</a>
 
