--- a/Eco_illum.html
+++ b/Eco_illum.html
@@ -26,7 +26,7 @@
       <img src="rss/AnnReflectionBannerforLetter_clear.png" height="60" alt="Ann Chou logo" />
     </a>
     <a href="index.html">Home 🏠</a>
-    <a href="artist-bio.html">Bio 🧬</a>
+    <a href="artist_bio.html">Bio 🧬</a>
     <a href="Eco_illum.html" class="eco-link active">Eco-Illum 🌘</a>
     <a href="https://annreflection.square.site/">ArtShop 👜</a>
   
