--- a/index.html
+++ b/index.html
@@ -99,7 +99,12 @@
       <p>Ann K Chou (she/her) is a multidisciplinary visual artist and researcher working with light, movement, and accessibility. She is a Deaf first-generation immigrant from Hong Kong whose practice celebrates broken objects, spontaneous collaboration, and joyful inclusion.</p>
       <p><strong>She believes things are meant to break—and be beautifully rebuilt.</strong></p>
       <p>Her preferred materials range from found objects and translucent fabrics to bamboo, garden clippings, and recycled plastics.</p>
+      
+      <div class="button-group">
+        <a href="artist_bio.html" class="button glow-ink">Learn Ann's Journey →</a>
+      </div>
     </section>
+
 
     <section id="dual-track">
       <h2>Art Meets Service Design</h2>
