--- a/Eco_illum.html
+++ b/Eco_illum.html
@@ -40,6 +40,9 @@
   </div>
 
   </header>
+<div style="text-align: center; margin-top: 1rem;">
+  <img src="rss-eco\Eco-illuminescence-Xchange-banner.png" alt="Eco Illuminescence Xchanges Gallery banner" style="width: 100%; max-width: 1200px; border-radius: 8px; box-shadow: 0 0 10px rgba(0,0,0,0.3);">
+</div>
 
 
 <!-- <div class="scroll-container">
@@ -80,6 +83,21 @@
     <p>A live camera pointed at a flat, illuminated surface allowed the artist to paint directly with sumi-e ink. This surface functioned as both a projection canvas and a performance space. The live feed was projected onto surrounding surfaces, creating a layered visual field. Participants were invited to co-create scenes through movement, layering, and light.</p>
     <p>This improvisational layer—<strong>a sensory crossing</strong>—allowed the visual art to speak back, poetically, through gesture and ephemeral choreography. It marked a turning point in the artist’s practice: a conversation between stillness and motion, installation and performance, object and presence.</p>.jpg
   </section>
+<section>
+  <h2>🎞️ Highlights in Motion</h2>
+  <p>Below are brief clips capturing moments of improvisation and light-play. Full video below.</p>
+
+  <div style="display: flex; flex-wrap: wrap; gap: 1rem; justify-content: center;">
+    <!-- Placeholder 1 -->
+    <video src="videos/eco_clip1.mp4" controls muted playsinline style="max-width: 300px; border-radius: 10px; background: #000;"></video>
+
+    <!-- Placeholder 2 -->
+    <video src="videos/eco_clip2.mp4" controls muted playsinline style="max-width: 300px; border-radius: 10px; background: #000;"></video>
+
+    <!-- Placeholder 3 -->
+    <video src="videos/eco_clip3.mp4" controls muted playsinline style="max-width: 300px; border-radius: 10px; background: #000;"></video>
+  </div>
+</section>
 
   <section>
     <h2>✦ From Ink to Lantern: 2D-to-3D Sumi-e Transformation</h2>
@@ -168,6 +186,17 @@
   </div>
 </section>
 
+<section>
+  <h2>📺 Full Performance Recording</h2>
+  <p>Watch the full improvised light projection play recorded at Xchanges Gallery (June 15, 2025).</p>
+
+  <div style="text-align: center;">
+    <video src="videos/eco_full_performance.mp4" controls style="width: 100%; max-width: 900px; border-radius: 12px; background-color: #000;"></video>
+
+    <!-- OR if hosted externally, use this instead: -->
+    <!-- <iframe src="https://www.youtube.com/embed/YOUR_VIDEO_ID" frameborder="0" allowfullscreen style="width:100%; max-width:900px; aspect-ratio: 16/9; border-radius: 12px;"></iframe> -->
+  </div>
+</section>
 
     
 </main>
