--- a/index.html
+++ b/index.html
@@ -96,9 +96,11 @@
 
     <section id="about">
       <h2>About Ann</h2>
-      <p>Ann K Chou (she/her) is a multidisciplinary visual artist and researcher working with light, movement, and accessibility. She is a Deaf first-generation immigrant from Hong Kong whose practice celebrates broken objects, spontaneous collaboration, and joyful inclusion.</p>
-      <p><strong>She believes things are meant to break—and be beautifully rebuilt.</strong></p>
-      <p>Her preferred materials range from found objects and translucent fabrics to bamboo, garden clippings, and recycled plastics.</p>
+     <p>Ann K. Chou (she/her) is a hard-of-hearing, neurodivergent visual artist and access designer, born in Hong Kong and currently active on the unceded lands of the lək̓ʷəŋən and xʷməθkʷəy̓əm peoples—also known as Victoria and Vancouver, BC.</p>
+     <p>Her practice bridges science and art—from microscope imaging to lantern-building—working with light, shadow, recycled materials, and movement to explore access, ecology, and collective care. Ann celebrates broken objects, spontaneous collaboration, and joyful inclusion through tactile installations, sumi-e brushwork, and mobile lantern sculptures.</p>
+
+     <p><strong>She believes things are meant to break—and be beautifully rebuilt.</strong></p>
+     <p>Her materials often include translucent fabrics, bamboo, garden clippings, mesh, and upcycled plastics, designed for multisensory engagement and adaptability across diverse environments.</p>
       
       <div class="button-group">
         <a href="artist_bio.html" class="button glow-ink">Learn Ann's Journey →</a>
