--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
   <main class="main" style="padding: 2rem">
     <h1 class="site-title">Ann K. Chou</h1>
     <p class="highlight-subtitle fade-in">
-      Visual installation artist, lantern-maker, and access designer.<br /> 
+      Multi-sensory artist, lantern-maker, access designer, artist-scientist<br /> 
     </p>
     <p class="subtitle fade-in">
       I create inclusive, sensory-based environments that spark improvised reflection and community connection.
@@ -110,6 +110,12 @@
 
     <section id="dual-track">
       <h2>Art Meets Service Design</h2>
+      <figure>
+            <img src="rss/Draw-aloudsymptom-PHRagency.png" alt="Draw-Aloud method diagram showing participant-coded sticky notes mapping symptoms and personal values." />
+            <figcaption>
+              Visual coding from a Draw-Aloud session. Participants mapped their past, present, and future health stories using drawing tools and sticky-note reflection—both in-person and remotely.
+            </figcaption>
+      </figure>
       <p>This section will showcase my Master’s thesis and how artistic practice intersects with inclusive service design.</p>
       <div class="project-grid clearfix">
         <div class="project">
@@ -135,12 +141,7 @@
             <li>🌀 <strong>Focus:</strong> Story, agency, and design justice in health records</li>
           </ul>
       
-          <figure>
-            <img src="rss/Draw-aloudsymptom-PHRagency.png" alt="Draw-Aloud method diagram showing participant-coded sticky notes mapping symptoms and personal values." />
-            <figcaption>
-              Visual coding from a Draw-Aloud session. Participants mapped their past, present, and future health stories using drawing tools and sticky-note reflection—both in-person and remotely.
-            </figcaption>
-          </figure>
+
         </div>
       </div>
       </div>
@@ -151,7 +152,7 @@
       <h2>AI & Service Design Portfolio</h2>
       <div class="project-grid clearfix">
         <div class="project">
-          <h3>AF Discovery – AI4Good</h3>
+          <h3>AF Discovery  (AI4Good Internship project)</h3>
           <p>An AI-assisted ultrasound image analysis system co-developed to estimate fetal head circumference. Combines UNET segmentation with Random Forest regression to support low-resource maternal care.</p>
           <a href="https://github.com/AnnChou/AF_Discovery" target="_blank">GitHub: AF_Discovery →</a>
           <figure>
@@ -166,8 +167,8 @@
           <figure>
              <img src="rss/service_dog_poster.png" alt="Illustrated poster showing a person with a guide dog entering a building, dog alert and focused." /> -->
             <figurecaption>Accessibility poster developed to support awareness of the Guide and Service Dog Act. Uses behavioral insight and inclusive visuals to affirm entry rights and reduce social friction for neurodivergent individuals accompanied by working animals.</figurecaption>
-          </figur
-                 </div>
+          </figure>
+          </div>
       </div>
     </section>
 
