--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Ann K. Chou – Artist & Accessibility Advocate</title>
+  <title>Ann K. Chou – Multi-sensory Artist, Access Designer, Artist-Scientist</title>
   <meta name="description" content="Ann K. Chou is a Deaf, Hong Kong–born artist and access designer who creates inclusive installations, sensory lanterns, and participatory workshops across Vancouver and Victoria." />
   <meta name="keywords" content="Ann Chou, artist, lantern maker, accessibility, Deaf artist, inclusive design, community art, Victoria BC, Vancouver BC, sensory art, sumi-e, light installation" />
   <meta name="author" content="Ann K. Chou" />
@@ -110,12 +110,7 @@
 
     <section id="dual-track">
       <h2>Art Meets Service Design</h2>
-      <figure>
-            <img src="rss/Draw-aloudsymptom-PHRagency.png" alt="Draw-Aloud method diagram showing participant-coded sticky notes mapping symptoms and personal values." />
-            <figcaption>
-              Visual coding from a Draw-Aloud session. Participants mapped their past, present, and future health stories using drawing tools and sticky-note reflection—both in-person and remotely.
-            </figcaption>
-      </figure>
+
       <p>This section will showcase my Master’s thesis and how artistic practice intersects with inclusive service design.</p>
       <div class="project-grid clearfix">
         <div class="project">
@@ -145,7 +140,14 @@
         </div>
       </div>
       </div>
-    
+
+      <figure class="wide-figure">
+        <img src="rss/Draw-aloudsymptom-PHRagency.png" alt="Draw-Aloud method diagram showing participant-coded sticky notes mapping symptoms and personal values." />
+        <figcaption>
+          Visual coding from a Draw-Aloud session. Participants mapped their past, present, and future health stories using drawing tools and sticky-note reflection—both in-person and remotely.
+        </figcaption>
+      </figure>
+      
     </section>
 
     <section id="ai-portfolio">
