--- a/index.html
+++ b/index.html
@@ -52,16 +52,18 @@
   </div>
 
   <main class="main" style="padding: 2rem">
-    <h1 class="site-title">Ann K. Chou</h1>
-    <p class="highlight-subtitle fade-in">
-      Multi-sensory artist, lantern-maker, access designer, artist-scientist<br /> 
-    </p>
-    <p class="subtitle fade-in">
-      I create inclusive, sensory-based environments that spark improvised reflection and community connection.
-    </p>
-    <p class="subtitle fade-in">
-      Through light, movement, and material storytelling, I activate storefronts and shared spaces to foster intergenerational dialogue and creative care.
-    </p>
+    <section class="intro">
+      <h1 class="site-title">Ann K. Chou</h1>
+      <p class="highlight-subtitle fade-in">
+        Multi-sensory artist, lantern-maker, access designer, artist-scientist<br /> 
+      </p>
+      <p class="subtitle fade-in">
+        I create inclusive, sensory-based environments that spark improvised reflection and community connection.
+      </p>
+      <p class="subtitle fade-in">
+        Through light, movement, and material storytelling, I activate storefronts and shared spaces to foster intergenerational dialogue and creative care.
+      </p>
+    </section>
 
     <section id="featured-projects">
       <h2>Key Artistic Projects</h2>
