--- a/index.html
+++ b/index.html
@@ -169,11 +169,13 @@
           <h3>Guide & Service Dog Accessibility Poster</h3>
           <p>Behavioral-insight–informed poster design to welcome neurodivergent individuals with service animals. Started from a CoPilot AI prompt and refined through visual/textual research on signage and stigma.</p>
           <figure>
-             <img src="rss/service_dog_poster.png" alt="Illustrated poster showing a person with a guide dog entering a building, dog alert and focused." /> -->
-            <figurecaption>Accessibility poster developed to support awareness of the Guide and Service Dog Act. Uses behavioral insight and inclusive visuals to affirm entry rights and reduce social friction for neurodivergent individuals accompanied by working animals.</figurecaption>
+            <img src="rss/service_dog_poster.png" alt="Illustrated poster showing a person with a guide dog entering a building, dog alert and focused." />
+            <figcaption>
+              Accessibility poster developed to support awareness of the Guide and Service Dog Act. Uses behavioral insight and inclusive visuals to affirm entry rights and reduce social friction for neurodivergent individuals accompanied by working animals.
+            </figcaption>
           </figure>
-          </div>
-      </div>
+        </div>
+
     </section>
 
     <section id="connect">
