--- a/workshops.html
+++ b/workshops.html
@@ -14,11 +14,11 @@
     <a href="index.html" class="logo">
       <img src="rss/AnnReflectionBannerforLetter_clear.png" height="60" alt="Annreflection Studio logo">
     </a>
-    <a href="index.html">Home</a>
-    <a href="artist_bio.html">About</a>
-    <a href="Eco_illum.html">Eco-Illum</a>
-    <a class="active" href="workshops.html">Workshops</a>
-    <a href="https://annreflection.square.site/">ArtShop</a>
+    <a href="index.html">Home 🏠</a>
+    <a href="artist_bio.html">Bio 🧬</a>
+    <a href="Eco_illum.html">Eco-Illum 🌘</a>
+    <a class="active" href="workshops.html">Workshops 🎨</a>
+    <a href="https://annreflection.square.site/">ArtShop 👜</a>
     <button id="darkModeToggle" class="button-ghost" onclick="toggleDarkMode()">🌙</button>
     <a href="javascript:void(0);" class="icon" onclick="myFunction()">
       <i class="fa fa-bars"></i>
