--- a/index.html
+++ b/index.html
@@ -154,7 +154,8 @@
       <figure class="wide-figure">
         <img src="rss/Draw-aloudsymptom-PHRagency.png" alt="Draw-Aloud method diagram showing participant-coded sticky notes mapping symptoms and personal values." />
         <figcaption>
-          Visual coding from a Draw-Aloud session. Participants mapped their past, present, and future health stories using drawing tools and sticky-note reflection—both in-person and remotely.
+        A glimpse into “Draw-Aloud Symptom/s”—an art × service design thesis grounded in critical ethnography. The project engaged diverse participants in community settings using the Draw-Aloud protocol to map past, present, and future health experiences through drawing and reflection.
+        Using the ELITO method, participant insights were translated into four technology personas—Bat, Dog, Health Altar, and Butterfly—each representing a unique relationship to health data and care. These personas now inform future blueprints and inclusive service design workshops.
         </figcaption>
       </figure>
       
